fix onclose takes too long, fix upgrade license for lower tier

--- a/src/assets/pro.scss
+++ b/src/assets/pro.scss
@@ -339,6 +339,7 @@ body.gutenverse-freemius-modal-open {
 }
 
 .gutenverse-pricing-card__button {
+    cursor: pointer;
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
