--- a/src/assets/toolbar/_freemius-popup.scss
+++ b/src/assets/toolbar/_freemius-popup.scss
@@ -231,6 +231,7 @@ body.gutenverse-freemius-modal-open {
 }
 
 .gutenverse-pricing-card__button {
+    cursor: pointer;
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
